issues with header and nav on ios, trying to fix + added footer to contact and resource page

--- a/main.css
+++ b/main.css
@@ -19,7 +19,9 @@
 
 
 header {
-  position: fixed;
+  position: sticky;
+  top: 0;
+  left: 0;
   padding: 0.25rem auto;
   width: 100%;
   height: 10vh;
@@ -65,8 +67,8 @@ article {
 
 .svg_shape_1 {
   position: absolute;
-  top: -20vh;
-  left: -20vw;
+  top: -10vh;
+  left: -30vw;
   transform: rotate(20deg) scale(0.6);
   z-index: -1;
 }
